PBT-1: OpenAPI UserController - user search described
